Fix heading spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ header {
   margin-left: 50px; }
 
 /* Main Page */
-#home {
+.content {
   padding-top: 30px; }
 
 .post {
