--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -38,7 +38,7 @@ header {
 }
 
 /* Main Page */
-#home {
+.content {
   padding-top: $main-header-size;
 }
 .post {
